[package]
name = "rem-utils"
version = "0.1.6"
edition = "2021"
authors = ["VERSE Lab <https://verse-lab.github.io>", "Matthew Britton <matt.britton@anu.edu.au>"]
license = "MIT"
description = "Utilities for Rusty Extraction Maestro"
repository = "https://github.com/RuleBrittonica/rem-utils.git" # Forked from: "https://github.com/verse-lab/rustic-cat"
keywords = ["utilities", "utils", "rem"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = {version="7.1.0"}
ena = {version="0.14"}
syn = {version="1.0.80", features=["extra-traits", "full", "visit", "fold", "visit-mut", "printing", "parsing"]}
log = "0.4.26"
proc-macro2 = { version = "1.0", features = ["span-locations"]}
string_cache = "0.8.8"
quote = "1.0.39"
home = "0.5.11"
regex = "1.11.1"
colored = "3.0.0"
diff = "0.1.13"
config = "0.15.9"
serde = { version = "1.0.218", features = ["derive"] }
